force-app/main/default/objects/SFInstance__c/SFInstance__c.object-meta.xml
<CustomObject>
    <description>SFInstance object created to store the SF Instance Key and the InstanceType as searched by the user in OrgTrustHealth Search and mark it as favourite</description>
    <label>SFInstance</label>
    <nameField>
        <label>InstanceKey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFInstances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>