force-app/main/default/objects/SFInstance__c/fields/InstanceKeyType__c.field-meta.xml
<CustomField>
    <fullName>InstanceKeyType__c</fullName>
    <description>Instance Key Type field used to identify if the instance is DOMAIN, INSTANCE, POD,MID</description>
    <label>InstanceKeyType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOMAIN</fullName>
                <default>true</default>
                <label>DOMAIN</label>
            </value>
            <value>
                <fullName>INSTANCE</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>MID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>